# decoupled-bottleneck-attention

./: .gitignore  Makefile  README.md  analyze_experiments.py  analyze_run.py  benchmark_128k.py  generate_paper_figures.py  instrumentation.py  main.py  paper.tex  plot_rank_evidence.py  plot_results.py  prepare_fineweb.py  pyproject.toml  pyrightconfig.json  references.bib  requirements.txt  requirements_runtime.txt  run_1b_launch.py  run_long_context_tests_v29.py  run_paper_v1_all.py  summarize_v29_suite.py  test_needle_haystack.py  test_needle_haystack_v29.py  test_rope_extrapolation.py  test_rope_extrapolation_v29.py  v10_log.jsonl  v10_transformer_lowrank_scaled.py  v19_transformer_attn_bottleneck.py  v20_transformer_lexical_bottleneck.py  v21_transformer_decoupled_bottleneck_gqa.py  v23_transformer_decoupled_bottleneck_fused_kernels.py  v24_transformer_decoupled_bottleneck_flash2pass.py  v25_transformer_decoupled_bottleneck_self_optimizing.py  v26_transformer_decoupled_bottleneck_self_optimizing.py  v27_transformer_decoupled_bottleneck_instrumented.py  v28_transformer_decoupled_bottleneck_instrumented.py  v29_transformer_decoupled_bottleneck_instrumented.py  v2_optimized_gradient_grouping.py  v3_adaptive_lowrank.py  (+11 more)
assets/: m4max_seed1337_summary.md  m4max_seed1338_summary.md  m4max_suite_rows.tex  m4max_suite_summary.md  needle_haystack.csv  rope_extrapolation.csv
caramba/: README.md  __init__.py  __main__.py  cli.py  command.py
docs/: LAUNCH_1B.md
experiments/: test_needle_haystack.py  v10_review_gemini_3_pro_temp_0.md  v11_transformer_lowrank_momentum.py  (+10 more)
(+456 files in other folders)
